--- a/package.json
+++ b/package.json
@@ -3,19 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "express-generator": "^4.15.5",
-    "material-ui": "^0.20.0",
-    "passport": "^0.4.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router": "^4.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "cd react-frontend && yarn start",
     "start-backend": "cd react-backend && yarn start"
   },
   "description": "bobi react app",
