--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "babel src -d lib",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -13,5 +14,11 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3"
   }
 }
