--- a/package.json
+++ b/package.json
@@ -2,23 +2,20 @@
   "name": "bobi",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react-scripts": "^1.1.1"
-  },
-  "scripts": {
-    "build": "webpack --config ./webpack-backend.js",
-    "start": "node ./dist/bundle-backend.js"
-  },
   "description": "bobi react app",
   "main": "index.js",
   "repository": "https://github.com/elliottktan/bobi.git",
   "author": "Elliott Tan",
   "license": "MIT",
+  "scripts": {
+    "start": "cd frontend && npm start",
+    "build": "cd frontend && npm run build",
+    "test": "cd frontend && npm test --env=jsdom",
+    "eject": "cd frontend && npm eject",
+    "start-server": "cd backend && npm start",
+    "dev": "concurrently --kill-others-on-fail \"npm start\" \"npm run start-server\""
+  },
   "devDependencies": {
-    "babel-minify-webpack-plugin": "^0.3.1",
-    "babel-preset-env": "^1.6.1",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack-cli": "^2.1.3",
-    "webpack-livereload-plugin": "^2.1.1"
+    "concurrently": "^3.5.0"
   }
 }
